welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: Missing closing brace `}' assumed here
def golomb(num:Int): Int = {
^